kqed_dev4/src/objects/Department__c.object
<CustomObject>
    <description>Object to store department records from Lawson.</description>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>The unique id for the department object.</description>
        <label>Department Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not the department is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Level__c</fullName>
        <description>The process level of the department - e.g. WGBH, WGBY, CCLA, CCNY</description>
        <label>Process Level</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGBH_ID__c</fullName>
        <description>The Combination of Code and Process Level is the unique id for the record (e.g. WGBH PSV, WGBY PSV etc..)</description>
        <externalId>true</externalId>
        <label>WGBH_ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>WGBH_ID__c</columns>
        <columns>Process_Level__c</columns>
        <columns>Department_Code__c</columns>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>